# room-meetings-booking

./: .gitignore  build.sh  pyproject.toml  render.yaml  requirements.txt
config/: settings.py  urls.py
rooms/: admin.py  apps.py  emails.py  forms.py  models.py  signals.py  urls.py  views.py
rooms/management/commands/: ensure_admin.py  ensure_groups.py  test_email.py
rooms/migrations/: 0001_initial.py  0002_add_booking_extras.py  0003_add_num_attendees.py
templates/: base.html
templates/registration/: login.html
templates/rooms/: booking_form.html  calendar.html  calendar_viewer.html
templates/rooms/email/: area_notification.txt  booking_cancellation.txt  booking_confirmation.txt  booking_update.txt  reception_notification.txt
templates/rooms/partials/: availability.html  calendar_grid.html
